# pycones-2025-web

./: .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  Makefile  README.md  blog.html  docker-compose.yml  gallery.html  index.html  jobs.html  keynoters.html  organizers.html  past_editions.html  pelicanconf.py  pelicanconf_common.py  pelicanconf_event.py  pelicanconf_event_jobs.py  pelicanconf_event_keynoters.py  pelicanconf_event_organizers.py  pelicanconf_event_sponsors.py  pyproject.toml  requirements.txt  schedule.html  sponsorship.html  welcome.html
.github/workflows/: deploy.yml
author/: python-espana-org.html
category/: welcome.html
compose/: Dockerfile
config/: pelicanconf_common.py  pelicanconf_event.py  pelicanconf_flags.py
content/: mapa.md  welcome.md
content/extra/: manifest.json
content/pages/: city.md  how_to_arrive.md  mapa.md  upo.md
data/: jobs.json  keynoters.json  organizers.json  past_editions.json  sponsors.json  team.json
extensions/: gphotos.py
feeds/: all-es.atom.xml  all.atom.xml  python-espana-org.atom.xml  python-espana-org.rss.xml  welcome.atom.xml
pages/: code-of-conduct.html  how-to-arrive.html  mapa.html  sevilla.html  upo.html
plugins/assets/: test_assets.py
plugins/i18n_subsites/: i18n_subsites.py  test_i18n_subsites.py
plugins/i18n_subsites/test_data/: pelicanconf.py
theme/css/: landing.css  style.min.css
theme/js/: landing.js
theme/scss/: sponsors.scss  style.scss
theme/static/scss/: style.scss
theme/templates/: gallery.html  index.html  schedule.html  sponsorship.html
(+11 files in other folders)
