[project]
name = "pycones-2025-web"
version = "0.1.0"
description = "Pycones 2025 Sevilla Website"
requires-python = "==3.13.*"
dependencies = [
    "beautifulsoup4==4.13.3",
    "blinker==1.9.0",
    "jinja2==3.1.5",
    "jinja2-simple-tags==0.6.1",
    "pelican==4.11.0",
    "pytz==2025.1",
    "requests==2.32.3",
    "six==1.17.0",
    "webassets==2.0",
    "lxml==5.3.1",
    "markdown==3.7"
]
